// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`less() should fail when value is not less than limit 1`] = `
Object {
  "message": "Value should be less than 1",
  "path": Array [],
  "type": "single",
  "value": 5,
}
`;

exports[`less() should fail when value is not less than limit 2`] = `
Object {
  "message": "Value should be less than 5",
  "path": Array [],
  "type": "single",
  "value": 5,
}
`;

exports[`less() should fail when value is not less than limit which is a reference 1`] = `
Object {
  "message": "Value should have a valid shape",
  "path": Array [],
  "requirement": Object {
    "message": "Value should be less than 1",
    "path": Array [
      "b",
    ],
    "type": "single",
    "value": 5,
  },
  "type": "dependence",
  "value": Object {
    "a": 1,
    "b": 5,
  },
}
`;

exports[`less() should support custom message 1`] = `
Object {
  "message": "Custom message",
  "path": Array [],
  "type": "single",
  "value": 5,
}
`;
